feat: modify icarus theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: cqq626's blog
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: cqq626
+language: zh-CN
 timezone: ''
 
 # URL
